school link hover colors. fixing large breakpoint h2 spacing.

--- a/assets/css/less/partials/colors.less
+++ b/assets/css/less/partials/colors.less
@@ -15,8 +15,12 @@
 
 // Colors for links to specific URLs:
 @bemidji: #005947;
+@bemidji-hover: #88b6ad;
 @ursinus: #98012e;
+@ursinus-hover: #4c101a;
 @lakeforest: #c31330;
 @lakeforest-hover: #96051e;
+@alma-hover: #008382;
+@lewis-clark-hover: #e66b3f;
 @menloschool: #0047a9;
 @menloschool-hover: #267cf0;
