--- a/assets/css/less/partials/typography.less
+++ b/assets/css/less/partials/typography.less
@@ -175,8 +175,8 @@ a {
   }
   h2 {
     margin-top: .5em;
-    margin-left: 45px;
-    margin-right: 45px;
+    margin-left: 25px;
+    margin-right: 25px;
     .font-size(48);
   }
   h3 {
